--- a/ExportBlog/ExportBlog.csproj
+++ b/ExportBlog/ExportBlog.csproj
@@ -52,6 +52,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\FeedEntity.cs" />
+    <Compile Include="Service\IFeedService.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
